Refactored match-set.ipynb

--- a/notebook/match_set.ipynb
+++ b/notebook/match_set.ipynb
@@ -2,23 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "d2425bd3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO: Add usda food ids to table\n",
     "# Imports.\n",
     "import pandas as pd\n",
     "import csv\n",
     "import re\n",
+    "import ast\n",
     "import math\n",
+    "import numpy as np\n",
     "from collections import Counter\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "from multiprocessing import Pool, cpu_count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "a7101c3e",
    "metadata": {},
    "outputs": [
@@ -35,18 +39,18 @@
    ],
    "source": [
     "# Get datasets.\n",
-    "grams = pd.read_csv(\"grams.csv\")\n",
+    "grams = pd.read_csv(\"../data/grams.csv\")\n",
     "print(\"Length of USDA portions dataset:\", len(grams))\n",
     "print(\"\")\n",
     "\n",
-    "ingr = pd.read_csv(\"ingr.csv\")\n",
+    "ingr = pd.read_csv(\"../data/ingr.csv\")\n",
     "print(\"Lenght of recipes dataset:\", len(ingr))\n",
     "print(\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "44ea9984",
    "metadata": {},
    "outputs": [],
@@ -57,27 +61,24 @@
     "# Food items in the USDA portions dataset will be appended to this list.\n",
     "comp = []\n",
     "\n",
+    "def _ingr_list_parser(x):\n",
+    "    if \"with\" not in x:\n",
+    "        return ast.literal_eval(x)\n",
+    "\n",
     "# This while loop iterates through ingredients dataset and formats each food item to resemble the formatting on the USDA dataset.\n",
     "# Formatted items are appended to ts list.\n",
-    "indx = 0\n",
-    "while indx < len(ingr):\n",
-    "    for element in ingr.food[indx].split(\",\"):\n",
-    "        \n",
-    "        # This if statement eliminates possible non-food items that are mixed in the ingredients dataset.\n",
-    "        if \"with\" not in element:\n",
-    "            \n",
-    "            # Elements are formatted.\n",
-    "            element = element.lower()\n",
-    "            a = re.sub(r\"[\\[\\]]\", \"\", element)\n",
-    "            a = a.replace(\"'\", \"\")\n",
-    "            a = a.lstrip()\n",
-    "            ts.append(a)\n",
-    "    \n",
-    "    # Index is increased by one at the end of the loop.\n",
-    "    indx+=1\n",
+    "ts = ingr.food.apply(_ingr_list_parser).tolist()\n",
+    "\n",
+    "ts = [np.array(item) for item in ts if item is not None]\n",
+    "\n",
+    "ts = np.hstack(ts)\n",
+    "\n",
+    "\n",
+    "ts = [item for item in ts if type(item) is str]\n",
     "\n",
     "# Duplicate food items are removed.\n",
     "ts = list(set(ts))\n",
+    "\n",
     "\n",
     "# This loop iterates through the USDA portions dataset and appends each food item to comp list.\n",
     "for element in grams.Main_Food_Description:\n",
@@ -89,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "8bc19190",
    "metadata": {},
    "outputs": [],
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "fac0d9c1",
    "metadata": {},
    "outputs": [],
@@ -127,91 +128,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "16ed8610",
+   "execution_count": 6,
+   "id": "16b02e41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the most similar usda food name for given food name\n",
+    "def get_cosine_list(foodName):\n",
+    "    maxScore = 0\n",
+    "    maxScore_usda = \"\"\n",
+    "    for usda in comp:\n",
+    "        cosine = get_cosine(text_to_vector(foodName), text_to_vector(usda))\n",
+    "        if cosine > maxScore:\n",
+    "            maxScore = cosine\n",
+    "            maxScore_usda = usda\n",
+    "    return {\n",
+    "        \"Ingr\": foodName,\n",
+    "        \"Match\": maxScore_usda,\n",
+    "        \"Score\": maxScore\n",
+    "    }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7e0bb519",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████| 16586/16586 [15:12<00:00, 18.19it/s]\n"
+      "100%|██████████| 18322/18322 [07:52<00:00, 38.75it/s]\n"
      ]
     }
    ],
    "source": [
-    "# These lists will be zipped together after the proper matches are made by looking at the best cosine similarity scores.\n",
-    "ingr_lst = []\n",
-    "usda_lst = []\n",
-    "cos_lst = []\n",
-    "\n",
-    "# This for loop iterates through food items from ingredient dataset.\n",
-    "for element in tqdm(ts):\n",
-    "    \n",
-    "    # The chosen food item is transformed to a vector.\n",
-    "    text1 = element\n",
-    "    vector1 = text_to_vector(text1)\n",
-    "\n",
-    "    # These lists will store the chosen food item's cosine similarity scores with all food items from USDA portions dataset.\n",
-    "    # fs stores names of the items, cs stores similarity scores of those items. They will be zipped together.\n",
-    "    fs = [] \n",
-    "    cs = []\n",
-    "    \n",
-    "    # This for loop iterates through USDA portions dataset's food items.\n",
-    "    for i in comp:\n",
-    "        \n",
-    "        # USDA food item is transformed to a vector.\n",
-    "        text2 = i\n",
-    "        vector2 = text_to_vector(text2)\n",
-    "        \n",
-    "        # Cosine similarity score between the USDA food item and the chosen food item is calculated.\n",
-    "        cosine = get_cosine(vector1, vector2)\n",
-    "        \n",
-    "        # Food item's name and its score is appended to their respective lists.\n",
-    "        fs.append(i)\n",
-    "        cs.append(cosine)\n",
-    "        \n",
-    "    # By zipping fs and cs, a master list containing each USDA item and its similarity score with the chosen food item is obtained.\n",
-    "    ms = list(zip(fs, cs))\n",
-    "    \n",
-    "    # The name of the chosen food item is appended to ingr_lst.\n",
-    "    ingr_lst.append(text1)\n",
-    "    \n",
-    "    # The name of the USDA food item which has the highest similarity with the chosen food item is appended to usda_lst.\n",
-    "    usda_lst.append(max(ms, key = lambda x: x[1])[0])\n",
-    "    \n",
-    "    # The best similarity score is appended to the cos_lst.\n",
-    "    cos_lst.append(max(ms, key = lambda x: x[1])[1])"
+    "pool = Pool(processes=cpu_count())\n",
+    "results = []\n",
+    "for result in tqdm(pool.imap_unordered(get_cosine_list, ts), total=len(ts)):\n",
+    "    results.append(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "7dddaa1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ingr</th>\n",
+       "      <th>Match</th>\n",
+       "      <th>Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Lemons</td>\n",
+       "      <td></td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>taleggio cheese</td>\n",
+       "      <td>cheese, processed cheese food</td>\n",
+       "      <td>0.577350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>beef filets</td>\n",
+       "      <td>beef jerky</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>rapid-rise yeast</td>\n",
+       "      <td>yeast</td>\n",
+       "      <td>0.577350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Crab boil</td>\n",
+       "      <td></td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18317</th>\n",
+       "      <td>peppermint patties</td>\n",
+       "      <td>double hamburger, from fast food, 2 medium pat...</td>\n",
+       "      <td>0.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18318</th>\n",
+       "      <td>whitewine vinegar</td>\n",
+       "      <td>vinegar</td>\n",
+       "      <td>0.707107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18319</th>\n",
+       "      <td>seaweed snacks</td>\n",
+       "      <td>seaweed soup</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18320</th>\n",
+       "      <td>mushroom or cheese tortelloni</td>\n",
+       "      <td>cheese, blue or roquefort</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18321</th>\n",
+       "      <td>Monterey Jack Cheese</td>\n",
+       "      <td></td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>18322 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                Ingr  \\\n",
+       "0                             Lemons   \n",
+       "1                    taleggio cheese   \n",
+       "2                        beef filets   \n",
+       "3                   rapid-rise yeast   \n",
+       "4                          Crab boil   \n",
+       "...                              ...   \n",
+       "18317             peppermint patties   \n",
+       "18318              whitewine vinegar   \n",
+       "18319                 seaweed snacks   \n",
+       "18320  mushroom or cheese tortelloni   \n",
+       "18321           Monterey Jack Cheese   \n",
+       "\n",
+       "                                                   Match     Score  \n",
+       "0                                                         0.000000  \n",
+       "1                          cheese, processed cheese food  0.577350  \n",
+       "2                                             beef jerky  0.500000  \n",
+       "3                                                  yeast  0.577350  \n",
+       "4                                                         0.000000  \n",
+       "...                                                  ...       ...  \n",
+       "18317  double hamburger, from fast food, 2 medium pat...  0.250000  \n",
+       "18318                                            vinegar  0.707107  \n",
+       "18319                                       seaweed soup  0.500000  \n",
+       "18320                          cheese, blue or roquefort  0.500000  \n",
+       "18321                                                     0.000000  \n",
+       "\n",
+       "[18322 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "linked_df = pd.DataFrame(results)\n",
+    "linked_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "21444fff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "linked_df.to_csv(\"../data/linked_df.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7dddaa1d",
+   "id": "1f53b657",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Three lists are zipped to form a list of best matches names match_lst.\n",
-    "match_lst = list(zip(ingr_lst, usda_lst, cos_lst))\n",
-    "\n",
-    "# match_lst is written as a csv file names link.csv.\n",
-    "with open('link.csv', 'w', newline=\"\") as csvfile:\n",
-    "    fwriter = csv.writer(csvfile)\n",
-    "    fwriter.writerows(match_lst)"
+    "linked_df.drop(linked_df[linked_df.Match == \"\"].index,).to_csv(\"../data/linked_df_dropped.csv\", index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "063001e9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python (system)",
    "language": "python",
    "name": "python3"
   },
@@ -225,7 +351,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": ""
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "972b6de16a1878fa6fcdbb27b0b6b0b2aa35566bf75b52396f9f47d7f37db45e"
+   }
   }
  },
  "nbformat": 4,
