--- a/notebook/main_ingr.ipynb
+++ b/notebook/main_ingr.ipynb
@@ -253,7 +253,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -267,7 +267,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "972b6de16a1878fa6fcdbb27b0b6b0b2aa35566bf75b52396f9f47d7f37db45e"
+   }
   }
  },
  "nbformat": 4,
