main_ingr.ipynb refactored

--- a/notebook/match_set.ipynb
+++ b/notebook/match_set.ipynb
@@ -337,7 +337,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (system)",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -351,11 +351,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": ""
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
-    "hash": "972b6de16a1878fa6fcdbb27b0b6b0b2aa35566bf75b52396f9f47d7f37db45e"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
